added banner secton

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
                 <h3 class="nav_tittle">Avi<span class="text_primary">j</span>it</h3>
                 <ul>
@@ -21,6 +21,17 @@
                     <li><button class="btn_primary">Hire Me</button></li>
                 </ul>
         </nav>
+        <div class="banner">
+            <div class="banner_content"> 
+                <h3 class="banner_greeting">Hi,I am</h3>
+                <h1 class="banner_tittle">Avijit Mondal</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo eveniet cumque iure maiores, error quae aperiam perferendis?
+                </p>
+                <button class="btn_primary">Dowenload Cv</button>
+                <button class="btn_primary">Contact</button>
+            </div>
+            <img src="images/hardy.png" class="profile_pic">
+        </div>
     </header>
 
     <main> 
